--- a/index.html
+++ b/index.html
@@ -132,6 +132,28 @@
           </div>
     </section>
 
+
+
+<!---------------------------------------------------------------------------------
+                                 biography Section
+---------------------------------------------------------------------------------->
+
+        <section>
+            <div class="container">
+                <div class="half-width">
+                    <h1 class="hi-heading">Career of<br>Cristiano Ronaldo</h1>
+                    <p>Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal, Madeira, Portugal), Portuguese football (soccer) forward who was one of the greatest players of his generation.</p>
+                    <a class="header-btn" href="https://www.britannica.com/biography/Cristiano-Ronaldo">Know Him</a>
+                </div>
+                <div class="half-width">
+                    <img src="images/ronaldo.jpg" id="match-photo"
+                         alt="Chrisiano Ronaldo holding the champion trophy of Copa America">
+                </div>
+            </div>
+        </section>
+    </main>
+    <hr>
+
 <!----------------------------------------------------------------------------
                                 Footer Section
 ----------------------------------------------------------------------------->
